@@ -1,3 +1,7 @@
+Sun Mar  8 13:03:22 1998  Tim Janik  <timj@gimp.org>
+
+	* gtk/gtkrange.h: removed gtk_range_calc_value().
+
 Sun Mar  8 04:22:36 1998  Tim Janik  <timj@gimp.org>
 
 	* gtk/gtkfilesel.c: applied gtk-gronlund-980307.patch.gz which
